added detail section

--- a/index.html
+++ b/index.html
@@ -135,6 +135,98 @@
               <div class="overview__rating-count">436 votes</div>
             </div>
           </div>
+
+          <div class="detail">
+            <div class="description">
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Commodi quisquam aspernatur distinctio quod repellendus?
+                Provident neque debitis nulla! Nam a quisquam dignissimos sunt
+                harum quibusdam accusamus voluptatem soluta perferendis dolore.
+              </p>
+              <p class="paragraph">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio
+                sit, blanditiis amet quam temporibus accusamus quo hi
+              </p>
+              <ul class="list">
+                <li class="list__item">Close to the beach</li>
+                <li class="list__item">Breackfast included</li>
+                <li class="list__item">Free airport shuttle</li>
+                <li class="list__item">Free wifi in all rooms</li>
+                <li class="list__item">Air conditioning and heating</li>
+                <li class="list__item">Pets allowed</li>
+                <li class="list__item">We speak all languages</li>
+                <li class="list__item">Perfect for families</li>
+              </ul>
+              <div class="recommend">
+                <p class="recommend__count">
+                  Lucy and 3 other firends recommend this hotel
+                </p>
+                <div class="recommend__friends">
+                  <img
+                    src="img/user-2.jpg"
+                    alt="Friend"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-3.jpg"
+                    alt="Friend"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-4.jpg"
+                    alt="Friend"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-5.jpg"
+                    alt="Friend"
+                    class="recommend__photo"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="user-reviews">
+              <figure class="review">
+                <blockquote class="review__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Animi, est error. Delectus iste eaque, velit vitae facilis eos
+                  necessitatibus voluptatem sapiente.
+                </blockquote>
+                <figcaption class="review__user">
+                  <img
+                    src="img/user-1.jpg"
+                    alt="user-1"
+                    class="review__photo"
+                  />
+                  <div class="review__user-box">
+                    <p class="review__user-name">Nick Smith</p>
+                    <p class="review__user-date">Feb 23rd, 2022</p>
+                  </div>
+                  <div class="review__rating">7.8</div>
+                </figcaption>
+              </figure>
+              <figure class="review">
+                <blockquote class="review__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Animi, est error.
+                </blockquote>
+                <figcaption class="review__user">
+                  <img
+                    src="img/user-6.jpg"
+                    alt="user-1"
+                    class="review__photo"
+                  />
+                  <div class="review__user-box">
+                    <p class="review__user-name">Anna Toe</p>
+                    <p class="review__user-date">Sept 13th, 2021</p>
+                  </div>
+                  <div class="review__rating">9.5</div>
+                </figcaption>
+              </figure>
+              <button class="btn-inline">Show all <span>&rarr;</span></button>
+            </div>
+          </div>
         </main>
       </div>
     </div>
