--- a/index.html
+++ b/index.html
@@ -90,7 +90,16 @@
             </li>
           </ul>
 
-          <div class="legal">&copy; 2017 by trillo. All rights reserved</div>
+          <div class="legal">
+            &copy; 2017 by trillo. All rights reserved
+            <br />
+            <a
+              class="btn-inline-2"
+              href="https://github.com/IyanTheekshana/frontend-project-two.github.io"
+              target="_blank"
+              >Github Repo <span>&rarr;</span></a
+            >
+          </div>
         </nav>
         <main class="hotel-view">
           <div class="gallery">
